--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,50 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE230</version>
         </dependency>
+
+   <!-- Converter για JSON (Gson) -->
+    <dependency>
+        <groupId>com.squareup.retrofit2</groupId>
+        <artifactId>converter-gson</artifactId>
+        <version>2.11.0</version>
+    </dependency>
+
+    <!-- OkHttp για HTTP requests -->
+    <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>okhttp</artifactId>
+        <version>4.9.3</version>
+    </dependency>
+    <!-- Retrofit Core -->
+    <dependency>
+        <groupId>com.squareup.retrofit2</groupId>
+        <artifactId>retrofit</artifactId>
+        <version>2.11.0</version>
+    </dependency>
+
+    <!-- Converter για JSON (Gson) -->
+
+    <!-- Retrofit Core -->
+    <dependency>
+        <groupId>com.squareup.retrofit2</groupId>
+        <artifactId>retrofit</artifactId>
+        <version>2.11.0</version>
+    </dependency>
+
+    <!-- Converter για JSON (Gson) -->
+    <dependency>
+        <groupId>com.squareup.retrofit2</groupId>
+        <artifactId>converter-gson</artifactId>
+        <version>2.11.0</version>
+    </dependency>
+
+    <!-- OkHttp για HTTP requests -->
+    <dependency>
+        <groupId>com.squareup.okhttp3</groupId>
+        <artifactId>okhttp</artifactId>
+        <version>4.9.3</version>
+    </dependency>
+
+
     </dependencies>
 </project>
