--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,6 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE230</version>
         </dependency>
-
-   <!-- Converter για JSON (Gson) -->
-    <dependency>
-        <groupId>com.squareup.retrofit2</groupId>
-        <artifactId>converter-gson</artifactId>
-        <version>2.11.0</version>
-    </dependency>
-
     <!-- OkHttp για HTTP requests -->
     <dependency>
         <groupId>com.squareup.okhttp3</groupId>
@@ -43,30 +35,28 @@
         <artifactId>retrofit</artifactId>
         <version>2.11.0</version>
     </dependency>
-
-    <!-- Converter για JSON (Gson) -->
-
-    <!-- Retrofit Core -->
-    <dependency>
-        <groupId>com.squareup.retrofit2</groupId>
-        <artifactId>retrofit</artifactId>
-        <version>2.11.0</version>
-    </dependency>
-
     <!-- Converter για JSON (Gson) -->
     <dependency>
         <groupId>com.squareup.retrofit2</groupId>
         <artifactId>converter-gson</artifactId>
         <version>2.11.0</version>
     </dependency>
-
-    <!-- OkHttp για HTTP requests -->
-    <dependency>
-        <groupId>com.squareup.okhttp3</groupId>
-        <artifactId>okhttp</artifactId>
-        <version>4.9.3</version>
+        <dependency>
+        <groupId>org.eclipse.persistence</groupId>
+        <artifactId>eclipselink</artifactId>
+        <version>2.7.11</version>
     </dependency>
+    <dependency>
+        <groupId>javax.persistence</groupId>
+        <artifactId>javax.persistence-api</artifactId>
+        <version>2.2</version>
+    </dependency> 
 
+    <dependency>
+        <groupId>org.apache.derby</groupId>
+        <artifactId>derby</artifactId>
+        <version>10.16.1.1</version>
+        </dependency>
 
     </dependencies>
 </project>
